--- a/style.css
+++ b/style.css
@@ -15,16 +15,60 @@ body::-webkit-scrollbar {
 }
 
 canvas {
-  margin: 50px;
+  margin: 25px 50px;
 }
 
 div#controls {
-  width: 60vw;
-  height: 100px;
-  margin: 75px 20vw;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 75px;
+  max-width: 70vw;
+  height: auto;
+  padding: 25px;
+  margin: 75px 15vw;
   background-color: #ffffff06;
   border: 1px solid var(--hover-color);
   border-radius: 15px;
+  flex-wrap: wrap;
+}
+
+button {
+  background-color: transparent;
+  color: var(--text-color);
+  font-weight: bold;
+  font-size: 22px;
+  transition: 0.1s;
+  border: 2px solid var(--hover-color);
+  border-radius: 8px;
+  padding: 10px 15px;
+  transition: 0.3s;
+  height: 50px;
+  width: 175px;
+  letter-spacing: 3px;
+}
+
+svg {
+  width: 25px;
+  height: 25px;
+}
+
+div.range-container {
+  display: flex;
+  width: 300px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+input {
+  width: 250px;
+  height: 50px;
+  accent-color: var(--hover-color);
+}
+
+button:hover {
+  color: var(--hover-color);
 }
 
 footer {
@@ -35,7 +79,7 @@ footer {
   height: fit-content;
   background-color: var(--background-color);
   font-family: sans-serif;
-  margin-top: 250px;
+  margin-top: 400px;
 }
 
 .footer-icon > svg {
