--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body::-webkit-scrollbar {
 }
 
 canvas {
-  margin: 25px 50px;
+  margin: 50px 50px;
 }
 
 div#controls {
@@ -69,6 +69,24 @@ input {
 
 button:hover {
   color: var(--hover-color);
+}
+
+.red-button {
+  border: 2px solid #ff000066;
+  color: #ff000088;
+}
+
+.red-button:hover {
+  color: #ff000066;
+}
+
+.green-button {
+  border: 2px solid #00ff0066;
+  color: #00ff0088;
+}
+
+.green-button:hover {
+  color: #00ff0066;
 }
 
 footer {
